--- a/src/index.css
+++ b/src/index.css
@@ -66,11 +66,11 @@ body {
     }
 
     .grid-headtext {
-        @apply text-xl font-semibold mb-2 text-white font-generalsans;
+        @apply text-xl font-semibold mb-2 text-white font-sans;
     }
 
     .grid-subtext {
-        @apply text-[#afb0b6] text-base font-generalsans;
+        @apply text-[#afb0b6] text-base font-sans;
     }
 
     .copy-container {
